# libcipr

./: .clang-format  CMakeLists.txt  README.md  to-do.todo
benchmarks/: README.md  benchmark_box.c  benchmark_gaussian.c  common.c  common.h
examples/: eg_box.c  eg_combination.c  eg_gaussian.c  eg_sobel.c  eg_unsharp_mask.c
include/LIBCIPR/: libcipr.h
src/filter/: blur_box.c  blur_gaussian.c  sobel.c  unsharp_mask.c
src/filter/legacy/: legacy_blur_box.c  legacy_blur_gaussian.c
src/format/: format_convert.c
src/image/: image.c  image.h
src/io/: jpeg_io.c  layout_convert.c  layout_convert.h  png_io.c
src/threading/: task_queue.c  task_queue.h  thread_pool.c  thread_pool.h
src/utils/: utils.c  utils.h
